  * platform support: Threads now enabled by default on RISC-V.
  * minor incompatible change: SB-THREAD:MUTEX-OWNER may return :THREAD-DEAD
    if the apparent owner either exited nearly instantly after releasing the
    mutex (and is not now the owner), or died and never released it.
  * optimization: fasls containing standard object literals are now smaller
    and load more efficiently.
  * bug fix: EQness of constants is now always preserved when block compiling.

changes in sbcl-2.2.2 relative to sbcl-2.2.1:
  * platform support:
    ** all architectures now share the coverage mark instrumentation
       implementation, meaning that performance now equals what had been
       implemented only on x86 architectures.
    ** fixed a performance regression on x86-64 from changes in AVX2 register
       handling.  (lp#1960081, reported by Michael Kappert)
    ** fixed a garbage collection bug on ppc64 manifesting in occasional
       corruption on threaded programs.  (lp#1959338, lp#1952973)
    ** micro-optimizations in type tests for (SIGNED-BYTE 64).
  * enhancement: improved handling of source locations for some classes
    of compile time and runtime errors.
  * enhancement: better source locations for structure accessors.
  * bug fix: SB-COVER now always instruments top level forms correctly.
  * bug fix: muffling conditions now works correctly on higher debug settings.
  * bug fix: local muffling declarations now scope correctly with respect to
    undefined variable warnings.
  * optimization: calls to STRING= can now return NIL more quickly on strings
    of unequal length.

changes in sbcl-2.2.1 relative to sbcl-2.2.0:
  * incompatible change: DEFINE-ALIEN-CALLBACK, which has never been exported
    from a public package, has been deleted.  It is superseded by
    SB-ALIEN:DEFINE-ALIEN-CALLABLE.
  * minor incompatible change: compiler warnings are emitted on more
    provably-erroneous code involving sequence functions on specialized
    arrays.