@@ -560,6 +560,40 @@
       (inst imul r x y)
       (inst jmp :o error))))
 
+(define-vop (*/fixnum=>integer)
+  (:translate *)
+  (:args (x :scs (signed-reg) :target rax)
+         (y :scs (signed-reg) :target header))
+  (:arg-types tagged-num tagged-num)
+  (:temporary (:sc signed-reg :offset rax-offset :from (:argument 0))
+              rax)
+  (:temporary (:sc signed-reg :offset rdx-offset :from (:argument 1))
+              rdx)
+  (:temporary (:sc signed-reg :from (:argument 2) :to :result) alloc-temp)
+  (:temporary (:sc signed-reg :from (:argument 2)) header)
+  (:results (r :scs (descriptor-reg)))
+  (:policy :fast-safe)
+  (:vop-var vop)
+  (:node-var node)
+  (:generator 10
+    (move rax x)
+    (inst imul y)
+    (inst mov header (compute-object-header (+ 2 bignum-digits-offset) bignum-widetag))
+    (inst jmp :o allocate)
+    (move r rax)
+    (inst shl r 1)
+    (inst jmp :no DONE)
+    (inst mov header (compute-object-header (+ 1 bignum-digits-offset) bignum-widetag))
+    allocate
+    (pseudo-atomic ()
+      (allocation nil (pad-data-block (+ 2 bignum-digits-offset)) 0
+                  r node alloc-temp thread-tn)
+      (storew header r)
+      (storew rax r 1)
+      (storew rdx r 2)
+      (inst or r other-pointer-lowtag))
+    DONE))
+
 (define-vop (fast-truncate/fixnum=>fixnum fast-safe-arith-op)
   (:translate truncate)
   (:args (x :scs (any-reg) :target eax)
